--- a/JAVA SCRIPT/TEORIA DE CONJUNTOS/intex.html
+++ b/JAVA SCRIPT/TEORIA DE CONJUNTOS/intex.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,8 +9,14 @@
     <script src="mixer.js"></script>
     <script src="sets.js"></script>
     <script src="operations.js"></script>
+    <link rel="stylesheet" href="main.css">
 </head>
+
 <body>
-    
+    <h2>TEORIA DE CONJUNTOS</h2>
+    <div id="resultados"></div>
+    <p>INGRESE MAXIMO DE LETRAS EN U: <input type="text" value="15" id="max-len"></p>
+    <button onclick="main()">GENERAR CONJUNTOS</button>
 </body>
+
 </html>
