fix: bug conjunto U

--- a/JAVA SCRIPT/TEORIA DE CONJUNTOS/intex.html
+++ b/JAVA SCRIPT/TEORIA DE CONJUNTOS/intex.html
@@ -16,7 +16,7 @@
     <h2>TEORIA DE CONJUNTOS</h2>
     <div id="resultados"></div>
     <p>INGRESE MAXIMO DE LETRAS EN U: <input type="text" value="15" id="max-len"></p>
-    <p class="resultado"><strong>U =</strong> {<span id="conU"></span>}</p>
+    <p class="resultado" id = "divU"><strong>U =</strong> {<span id="conU"></span>}</p>
     <p class="resultado"><strong>A =</strong> {<input type="text" id="conA">}</p>
     <p class="resultado"><strong>B =</strong> {<input type="text" id="conB">}</p>
     <p class="resultado"><strong>C =</strong> {<span id="conC"></span>}</p>
