add: new practices

--- a/JAVA SCRIPT/TEORIA DE CONJUNTOS/intex.html
+++ b/JAVA SCRIPT/TEORIA DE CONJUNTOS/intex.html
@@ -14,13 +14,16 @@
 
 <body>
     <h2>TEORIA DE CONJUNTOS</h2>
-    <p>INGRESE MAXIMO DE LETRAS EN U: <input type="text" value="15" id="max-len"></p>
-    <p class="resultado" id = "divU"><strong>U =</strong> {<span id="conU"></span>}</p>
-    <p class="resultado"><strong>A =</strong> {<input type="text" id="conA">}</p>
-    <p class="resultado"><strong>B =</strong> {<input type="text" id="conB">}</p>
-    <p class="resultado"><strong>C =</strong> {<span id="conC"></span>}</p>
+    <DIV class="resultado">
+        <H2>CONJUNTOS</H2>
+        <p>INGRESE MAXIMO DE LETRAS EN U: <input type="text" value="15" id="max-len"></p>
+        <p class="resultado" id="divU"><strong>U =</strong> {<span id="conU"></span>}</p>
+        <p class="resultado"><strong>A =</strong> {<input type="text" id="conA">}</p>
+        <p class="resultado"><strong>B =</strong> {<input type="text" id="conB">}</p>
+        <p class="resultado"><strong>C =</strong> {<span id="conC"></span>}</p>
+    </DIV>
     <div class="resultado" id="resultados">
-        
+
     </div>
     <button onclick="main()">GENERAR CONJUNTOS</button>
 
